--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 test.json
-progress_report.md
-refactoring_proposal.md
+# progress_report.md
+# refactoring_proposal.md
 __pycache__/
 *.py[cod]
 *$py.class
